# PayFren.Cash

./: .gitignore  README.md  package-lock.json  package.json
abi/SmartContractWallet.sol/: SmartContractWallet.json
abi/WalletFactory.sol/: WalletFactory.json
sp1-dkim/elf/: riscv32im-succinct-zkvm-elf
sp1-dkim/lib/src/: lib.rs
sp1-dkim/program/: Cargo.toml
sp1-dkim/program/src/: main.rs
sp1-dkim/script/: Cargo.toml
src/: cli.js  nameserver-smtp.js  server.js  test.js
src/config/: config.js
src/services/: EMLStorageService.js  EmailParser.js  EmailReplyService.js  NotificationService.js  PayCryptEmailServer.js  SmartContractService.js
src/utils/: hasher.js  logger.js
