[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci"

[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "2.0.0"
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
fibonacci-lib = { path = "../lib" }
cfdkim = { git = "https://github.com/allemanfredi/dkim" }
mailparse = "0.14"
tokio = "1.40.0"
trust-dns-resolver = "0.23.2"

[build-dependencies]
sp1-helper = "2.0.0"
